# living-memory

./: .gitignore  CLAUDE.md  README.md  firestore.rules  pyproject.toml
client/: admin.html
docs/: harness.md  manual-test-script.md  migration-strategy.md  pivot-implementation-plan.md
flutter_app/: README.md  pubspec.yaml
memories/: 2026-02-20-l1-l2-combined-potluck-love-feast.md  2026-02-21-brothers-online-morning-revival-central-district-prayer.md  2026-02-21-young-peoples-gathering-potluck.md  2026-02-22-potluck-love-feast-districts-1-and-2.md  2026-02-22-truth-sets-us-free-webinar.md  2026-05-22-international-memorial-day-conference.md  ongoing-ben-zhou-chen-xing.md
scripts/: migrate_workspace_to_room.py
src/: api.py  api_v2.py  assistant.py  assistant_actions.py  cleanup.py  committer.py  dates.py  delivery_storage.py  firestore_storage.py  ics_export.py  login.py  memory.py  models.py  notifications.py  occurrence_service.py  page_storage.py  publisher.py  recurrence.py  room_storage.py  series_storage.py  storage.py  study.py  study_storage.py  telegram_chat_handler.py  telegram_storage.py  workspace_storage.py
templates/: blog.md  page.html  portfolio.md  wiki.md
tests/: test_api_pages.py  test_api_telegram_bot.py  test_api_v2.py  test_assistant.py  test_cleanup.py  test_cleanup_firestore.py  test_committer.py  test_committer_firestore.py  test_dates.py  test_firestore_storage.py  test_ics_export.py  test_login.py  test_memory.py  test_models.py  test_notifications.py  test_occurrence_service.py  test_page_storage.py  test_publisher.py  test_study.py  (+7 more)
(+78 files in other folders)
