[project]
name = "living-memory"
version = "0.1.0"
description = "A static website generator managed by AI agent memory"
requires-python = ">=3.11"
dependencies = [
    "python-frontmatter>=1.1.0",
    "google-genai>=1.0.0",
    "google-cloud-storage>=2.0.0",
    "python-dotenv>=1.0.0",
    "markdown>=3.5",
]

[project.scripts]
publisher = "publisher:main"
committer = "committer:main"
cleanup = "cleanup:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
