[project]
name = "living-memory"
version = "0.1.0"
description = "A static website generator managed by AI agent memory"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.0.0",
    "google-cloud-storage>=2.0.0",
    "google-cloud-firestore>=2.0.0",
    "python-dotenv>=1.0.0",
    "markdown>=3.5",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "firebase-admin>=6.0.0",
    "keyring>=25.0.0",
    "icalendar>=5.0.0",
]

[project.scripts]
publisher = "publisher:main"
committer = "committer:main"
cleanup = "cleanup:main"
login = "login:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
